# CPP-Template

./: .gitignore  CMakeLists.txt  Doxyfile  NAMEHERE.geany  README.md  TexKit.geany  generate
include/TexKit/: test.hpp
src/: config.hpp.in  test.cpp
tests/: test_1.cpp
